src/test/ui/closures/2229_closure_analysis/migrations/insignificant_drop_attr_migrations.stderr
error[E0107]: missing generics for struct `Mutex`
  --> $DIR/insignificant_drop_attr_migrations.rs:12:8
   |
LL |     y: Mutex,
   |        ^^^^^ expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `T`
  --> $SRC_DIR/std/src/sync/mutex.rs:LL:COL
   |
LL | pub struct Mutex<T: ?Sized> {
   |            ^^^^^ -
help: add missing generic argument
   |
LL |     y: Mutex<T>,
   |        ~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
